# fulbo

./: .prettierrc  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/datasource/: mod.rs
src/domain/: league.rs  mod.rs  team.rs
src/parser/: cli.rs  configfile.rs  mod.rs
