[workspace.lints.rust]
missing_abi = "warn"
missing_docs = "warn"
noop_method_call = "warn"
pointer_structural_match = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"

[workspace.lints.clippy]
pedantic = "warn"
as_conversions = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
missing_docs_in_private_items = "warn"
negative_feature_names = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
wildcard_dependencies = "warn"

[package]
name = "fulbo"
description = "A little CLI utility to know what's going on with football"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
error-chain = "0.12.4"
tokio = { version = "1.15.0", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
dirs = "5.0.1"
